revops-lab/main/default/objects/Order/fields/ERP_Next_Retry_At__c.field-meta.xml
<CustomField>
    <fullName>ERP_Next_Retry_At__c</fullName>
    <label>ERP Next Retry At</label>
    <type>DateTime</type>
</CustomField>