revops-lab/main/default/objects/Order/fields/ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>ERP Order Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>