revops-lab/main/default/objects/Order/fields/ERP_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>ERP_Retry_Count__c</fullName>
    <label>ERP Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>