revops-lab/main/default/objects/Order/fields/ERP_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync_Status__c</fullName>
    <label>ERP Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>