revops-lab/main/default/objects/Order/fields/Quote_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Configuration</label>
    <referenceTo>Quote_Configuration__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>